burger menu spacing fixes

--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -10,7 +10,7 @@
     height: 80px;
   }
 
-  nav a {
+  nav.desktop-nav a {
     position: relative;
     transition: color 0.2s ease;
 
@@ -42,8 +42,8 @@
     transform: translateX(100%);
 
     transition:
-      transform 0.5s cubic-bezier(.22, 1.25, .83, .67),
-      opacity 0.1s cubic-bezier(.22, 1.25, .83, .67);
+      transform 0.5s ease-in,
+      opacity 0.1s ease-in;
 
     pointer-events: none;
 
@@ -54,7 +54,7 @@
     }
 
     &--closing {
-      // opacity: 0;
+      opacity: 0;
       transform: translateX(100%);
       pointer-events: none;
     }
@@ -67,6 +67,37 @@
 
     &-close {
       margin-right: 5px;
+    }
+
+    &-navitem {
+      position: relative;
+      display: flex;
+      align-self: flex-start;
+      font-size: 48px;
+      line-height: 36px;
+      text-transform: uppercase;
+      margin: 0 20px;
+
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -5px;
+        width: 0%;
+        height: 1px;
+        background-color: #000;
+        transition: width 0.3s ease;
+      }
+
+      &:hover::after,
+      &.active::after {
+        width: 100%;
+      }
+
+      &:hover,
+      &.active {
+        color: #000;
+      }
     }
   }
 }
